Changes in quota-tools from 3.02 to 3.03

* quotacheck now skips quota file scanning when file not found (Jan Kara)
* repquota shouldn't show grace times when softlimit is not exceeded (Jan Kara)
* removed bogus error message in mountpoint scanning (Jan Kara)
* fixed mountpoint scanning initialization (solved rpc.rquotad SEGFAULT) (Jan Kara)
* rpc.rquotad now doesn't need mountpoint for quota operations (Jan Kara)
* fixed compilation on sparc (Michael Meskes, Jan Kara)

Changes in quota-tools from 3.01 to 3.02

* added -n option (don't resolve names) to repquota (Jan Kara)
* quota tools now correctly handle zero grace times in old format (Jan Kara)
* edquota, setquota commit just grace times and flags - fixed possible races
  when used on live filesystem (Jan Kara)
* another fix to quotastats (Jan Kara)
* added check to format detection for bad endianity (Jan Kara)
* implemented conversion of files with bad endianity (Jan Kara)
* fixes in warnquota, warnquota now allows line splitting by '\', text of mail
  can be specified in config file (Jan Kara)

Changes in quota-tools from 3.01-final to 3.01

* quotastats should now work better on old kernels (Jan Kara)
* quotacheck is more strict in checking it's arguments (Jan Kara)
* edquota and setquota should be now save to run for working user
  (number of used blocks and inodes could be wrong in previous versions)
  (Jan Kara)

Changes in quota-tools from 3.01-pre9 to 3.01-final

* quotacheck is using ext2_ino_t if defined (Jani Jaakkola, Jan Kara)
* rpc.rquotad now closes stdin, stdout unless run on foreground (Jani Jaakkola)
* setquota can be disabled in rpc.rquotad by commandline option (Jani Jaakkola)
* quota-tools should now work well also on RH 7.1 (Anders Blomdell, Jan Kara)
* quotacheck makes backup files only when told by option (Preston Brown)
* quotacheck now uses vfsv0 format when no quotafile is found (Jan Kara)
* fixed mountpoint scanning bug when bad mountpoint was specified (Jan Kara)